Rewrote SheetService.java Rewrote methods to remove deprecated libraries